--- a/css/main.less
+++ b/css/main.less
@@ -19,7 +19,8 @@ html, body {
 .side_shadow {
   width: 100%;
   height: 100%;
-  opacity: 0.7;
+  background: black;
+  opacity: 0.5;
   position: fixed;
   top: 0;
   left: 0;
